--- a/src/styles/Search/Results.css
+++ b/src/styles/Search/Results.css
@@ -1,4 +1,4 @@
-.mediaCard {
+.search_media_card {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -11,7 +11,7 @@
     width: 100%;
 }
 
-.mediaCard a {
+.search_media_card a {
     color: #000;
     text-decoration: none;
 
